--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "dependencies": {
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.3.0"
+  },
+  "scripts": {
+    "dev": "next dev",
+
+    "build": "next build",
+    "start": "next start"
   }
 }
+
