--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-#this are the test files
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
 node_modules
