--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": "18.xxx"
+  },
+
   "dependencies": {
     "next": "^14.2.5",
     "react": "^18.3.1",
@@ -12,4 +16,3 @@
     "start": "next start"
   }
 }
-
