--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@badrap/bar-of-progress": "^0.2.1",
         "@headlessui/react": "^1.6.6",
         "@heroicons/react": "^2.0.7",
+        "@noble/ed25519": "^2.1.0",
         "@project-serum/anchor": "^0.25.0",
         "@solana/wallet-adapter-react": "^0.15.18",
         "@solana/wallet-adapter-react-ui": "^0.9.16",
