--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "engines": {
-    "node": "18.xxx"
+    "node": "18.x"
   },
-
   "dependencies": {
+    "better-sqlite3": "^11.1.2",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -11,7 +11,6 @@
   },
   "scripts": {
     "dev": "next dev",
-
     "build": "next build",
     "start": "next start"
   }
