--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,8 @@
 {
+    "engines": {
+  "node": ">=14.0.0"
+},
+
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
@@ -25,7 +29,7 @@
         "react-date-range": "^1.4.0",
         "react-dom": "18.0.0",
         "react-hot-toast": "^2.3.0",
-        "sqlite3": "^5.1.7",
+        
         "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
