--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
     "engines": {
-  "node": ">=14.0.0"
-},
-
+        "node": "18.x"
+    },
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
@@ -23,13 +22,13 @@
         "@solana/wallet-adapter-react-ui": "^0.9.16",
         "@solana/wallet-adapter-wallets": "^0.18.6",
         "@solana/web3.js": "^1.56.0",
+        "better-sqlite3": "^11.1.2",
         "date-fns": "^2.29.2",
         "next": "12.1.5",
         "react": "^18.2.0",
         "react-date-range": "^1.4.0",
         "react-dom": "18.0.0",
         "react-hot-toast": "^2.3.0",
-        
         "tailwind-scrollbar-hide": "^1.1.7"
     },
     "devDependencies": {
