--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,10 +1,11 @@
 {
-    "engines": {
-        "node": "18.x"
-    },
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "license": "MIT",
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -24,7 +25,7 @@
         "@solana/web3.js": "^1.56.0",
         "better-sqlite3": "^11.1.2",
         "date-fns": "^2.29.2",
-        "next": "12.1.5",
+        "next": "^14.2.5",
         "react": "^18.2.0",
         "react-date-range": "^1.4.0",
         "react-dom": "18.0.0",
