--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,6 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
-    "license": "MIT",
-    "engines": {
-        "node": ">=18.0.0"
-    },
     "scripts": {
         "dev": "next dev",
         "build": "next build",
@@ -17,19 +13,16 @@
         "@badrap/bar-of-progress": "^0.2.1",
         "@headlessui/react": "^1.6.6",
         "@heroicons/react": "^2.0.7",
-        "@noble/ed25519": "^2.1.0",
         "@project-serum/anchor": "^0.25.0",
         "@solana/wallet-adapter-react": "^0.15.18",
         "@solana/wallet-adapter-react-ui": "^0.9.16",
         "@solana/wallet-adapter-wallets": "^0.18.6",
         "@solana/web3.js": "^1.56.0",
-        "better-sqlite3": "^11.1.2",
         "date-fns": "^2.29.2",
-        "next": "^14.2.5",
-        "punycode": "^2.3.1",
+        "next": "12.1.5",
         "react": "^18.2.0",
         "react-date-range": "^1.4.0",
-        "react-dom": "^18.2.0",
+        "react-dom": "18.0.0",
         "react-hot-toast": "^2.3.0",
         "tailwind-scrollbar-hide": "^1.1.7"
     },
